src/components/InvoiceDatasheet/InvoiceDatasheet.module.css
.wrapper {
  display: block;
  padding: 5px;
  width: 100%;
  margin-top: 20px;
}

.wrapper table.data-grid tr td.cell,
.wrapper table.data-grid tr th.cell {
  font-size: 12px;
}

pre {
  display: inline-block;
  background: #333;
  padding: 10px 30px;
  border-left: 2px solid white;
}

:global(.cell.read-only) {
  background-color: var(--datasheet-read-only-background) !important;
  color: var(--datasheet-read-only-text-color) !important;
}

:global(.cell) {
  position: relative;
  border: 0 !important;
  border-left: 0.5px solid var(--datasheet-border-color) !important;
  border-bottom: 0.5px solid var(--datasheet-border-color) !important;
}

:global(.data-grid-container .data-grid .cell.selected) {
  box-shadow: inset 0 20rem 0 rgba(33, 133, 208, 0.15);
}

:global(input.data-editor) {
  height: 100% !important;
  width: 100% !important;
  text-align: left !important;
  font-size: var(--font-size-normal);
  color: var(--text-color);
}

:global(span.value-viewer) {
  max-height: 10rem;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
}

.multilineCellValue {
  user-select: text;
  cursor: text;
  word-break: break-word;
  white-space: pre-line !important;
  padding: 0 0.5rem;
}

.table {
  table-layout: fixed;
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  min-width: 100rem;
  background-color: transparent;
}

.tableHead {
  background-color: var(--datasheet-read-only-background);
}

.tableCell {
  border: 1px solid var(--datasheet-border-color);
  max-width: 12rem;
  min-width: 12rem;
  overflow: hidden;
  text-align: center;
  text-overflow: ellipsis;
}

.tableHeadCell {
  composes: tableCell;
  height: 5.2rem;
}

.tableRow > td {
  height: 4rem !important;
  vertical-align: middle !important;
  text-align: center !important;
  max-width: 12rem;
  min-width: 12rem;
  text-align: center;
  text-overflow: ellipsis;
  font-size: var(--font-size-small);
}

.datasheetWrapper {
  width: 100%;
  overflow-y: visible;
  overflow-x: auto;
  padding-bottom: 5rem;
}

.textWrapper {
  display: flex;
  align-items: center;
}

.invoiceError {
  color: var(--color-orange) !important;
  margin-bottom: 0 !important;
}

